force-app/main/default/objects/Guest__c/fields/Dietary__c.field-meta.xml
<CustomField>
    <fullName>Dietary__c</fullName>
    <label>Dietary Restrictions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Halal</fullName>
            </value>
            <value>
                <fullName>Gluten-Free</fullName>
            </value>
            <value>
                <fullName>Nut Allergy</fullName>
            </value>
            <value>
                <fullName>Dairy-Free</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>