force-app/main/default/objects/Guest__c/fields/Other_Dietary_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Dietary_Notes__c</fullName>
    <label>Other Dietary Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>