force-app/main/default/objects/Guest__c/fields/Plus_One__c.field-meta.xml
<CustomField>
    <fullName>Plus_One__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Adds 1 to Event Confirmed Headcount roll-up</description>
    <label>Plus-One Included</label>
    <type>Checkbox</type>
</CustomField>