force-app/main/default/objects/Guest__c/fields/RSVP__c.field-meta.xml
<CustomField>
    <fullName>RSVP__c</fullName>
    <label>RSVP Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
                <default>true</default>
                <label>Invited</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>