force-app/main/default/objects/Guest__c/fields/Seating_Notes__c.field-meta.xml
<CustomField>
    <fullName>Seating_Notes__c</fullName>
    <label>Seating Preference Notes</label>
    <type>TextArea</type>
</CustomField>