force-app/main/default/objects/Guest__c/fields/Side__c.field-meta.xml
<CustomField>
    <fullName>Side__c</fullName>
    <label>Guest Side</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Host A</fullName>
            </value>
            <value>
                <fullName>Host B</fullName>
            </value>
            <value>
                <fullName>Shared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>