force-app/main/default/objects/Guest__c/fields/Total_Guests__c.field-meta.xml
<CustomField>
    <fullName>Total_Guests__c</fullName>
    <description>add the value of all guests for this record</description>
    <formula>if(ISPICKVAL(RSVP__c ,&quot;Confirmed&quot;),(1 + if(Plus_One__c,1,0)),if(ISPICKVAL(RSVP__c,&quot;Declined&quot;), 0,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Guests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>