force-app/main/default/objects/Guest__c/validationRules/Blank_Name_Added.validationRule-meta.xml
<ValidationRule>
    <fullName>Blank_Name_Added</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please add a guest name to proceed with saving the record</errorMessage>
</ValidationRule>