force-app/main/default/objects/Guest__c/validationRules/Other_Dietary_Restrictions_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Dietary_Restrictions_Selected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  INCLUDES( Dietary__c , &quot;Other&quot;),
  ISBLANK(Other_Dietary_Notes__c)
)</errorConditionFormula>
    <errorDisplayField>Other_Dietary_Notes__c</errorDisplayField>
    <errorMessage>Please specify the dietary restriction in the 
&quot;Other Dietary Notes&quot; field when selecting &quot;Other&quot;.</errorMessage>
</ValidationRule>